Correction Text contrast

--- a/style.css
+++ b/style.css
@@ -830,6 +830,10 @@ h4 {
     background-image: url("./img/image-de-presentation.webp");
 }
 
+.text-dark-footer {
+    color: black;
+}
+
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
